maze.lessons.maze.island.IslandMaze.scala.error
Escaper:25: error: not found: value prednBiscuit
prednBiscuit()
^